--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
