--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "antd": "^5.21.2",
     "next": "14.2.13",
     "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "yup": "^1.4.0",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
