--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.9",
     "react-hook-form": "^7.53.0",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0",
     "zustand": "^5.0.0-rc.2"
   },
